// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enforceAllElements is enforced when requested 1`] = `
"The fieldset entry 'missing' is missing - in case it has been specified look for typos and also check for correct capitalization.

   Line | Content
      1 | 
 >    2 | fieldset:
 *    3 | present = yes
      4 | 
      5 | # section
   ...
"
`;

exports[`enforceAllElements is enforced when requested 2`] = `
"The field 'missing' is missing - in case it has been specified look for typos and also check for correct capitalization.

   Line | Content
 *    1 | 
 *    2 | fieldset:
 *    3 | present = yes
 *    4 | 
 *    5 | # section
 *    6 | 
 *    7 | fieldset in section:
 *    8 | present = yes
 *    9 | 
"
`;

exports[`enforceAllElements is enforced when requested 3`] = `
"The fieldset entry 'missing' is missing - in case it has been specified look for typos and also check for correct capitalization.

   Line | Content
   ...
      5 | # section
      6 | 
 >    7 | fieldset in section:
 *    8 | present = yes
      9 | 
"
`;

exports[`enforceAllElements is enforced when requested 4`] = `
"The field 'missing' is missing - in case it has been specified look for typos and also check for correct capitalization.

   Line | Content
   ...
      3 | present = yes
      4 | 
 >    5 | # section
 *    6 | 
 *    7 | fieldset in section:
 *    8 | present = yes
 *    9 | 
"
`;
